--- a/templates/blog/article_list.html
+++ b/templates/blog/article_list.html
@@ -4,43 +4,40 @@
     Article List
 {% endblock title %}
 {% block content %}
-        {% if request.user.is_authenticated %}
-        <h1>Rafa's Blog!</h1>
-            <h2>My Articles</h2>
-            <ul>
-                {% for category in article_category %}
-                    {% for article in category.article_category.all %}
-                        {% if article.author == request.user.profile %}
-                            <li>
-                                <a href = "{{ article.get_absolute_url }}"> {{article.title}} </a>
-                            </li>
-                        {% endif %}
-                    {% endfor %}
-                {% endfor %}
-            </ul>
-            <a href = "{% url 'blog:create_article'%}">Create New Article</a>
-        {% endif %}
-
+    {% if request.user.is_authenticated %}
+        <h1>Blog</h1>
+        <h2>My Articles</h2>
+        <ul>
+            {% for article in object_list %}
+                {% if article.author == request.user.profile %}
+                    <li>
+                        <a href = "{{ article.get_absolute_url }}">{{ article.title }}</a>
+                    </li>
+                {% endif %}
+            {% endfor %}
+        </ul>
+        <a href = "{% url 'blog:article_create' %}">Create New Article</a>
+    {% endif %}
     <h2>All Articles</h2>
     <ul>
-        {% for category in article_category %}
+        {% for category in categories %}
             <li>
-                <h4>{{category.name}}</h4>
+                <h4>{{ category.name }}</h4>
                 <ul>
-                    {% for article in category.article_category.all %}
+                    {% for article in object_list %}
                         {% if request.user.is_authenticated %}
-                            {% if not article.author == request.user.profile %}
+                            {% if article.author != request.user.profile %}
                                 <li>
-                                    <a href = "{{ article.get_absolute_url }}">{{article.title}}</a>
+                                    <a href = "{{ article.get_absolute_url }}">{{ article.title }}</a>
                                 </li>
                             {% endif %}
                         {% else %}
                             <li>
-                                <a href = "{{ article.get_absolute_url }}">{{article.title}}</a>
+                                <a href = "{{ article.get_absolute_url }}">{{ article.title }}</a>
                             </li>
                         {% endif %}
                     {% endfor %}
-                </ul>   
+                </ul>
             </li>
         {% endfor %}
     </ul>
